// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiTypes should have specific API properties: all exported api types 1`] = `
Object {
  "apiTypes": Object {
    "platformApi": Object {
      "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
      "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": Object {
        "ENTITLED": "is_entitled",
      },
      "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
      "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": Object {
        "USER": "user",
      },
      "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": Object {
        "ORG_ADMIN": "is_org_admin",
      },
      "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": Object {
        "PERMISSION": "permission",
        "RESOURCE_DEFS": "resourceDefinitions",
      },
    },
    "rhsmApi": Object {
      "RHSM_API_PATH_ID_TYPES": Object {
        "OPENSHIFT": "OpenShift Container Platform",
        "RHEL": "RHEL",
        "RHEL_ARM": "RHEL for ARM",
        "RHEL_COMPUTE_NODE": "RHEL Compute Node",
        "RHEL_DESKTOP": "RHEL Desktop",
        "RHEL_IBM_POWER": "RHEL for IBM Power",
        "RHEL_IBM_Z": "RHEL for IBM z",
        "RHEL_SERVER": "RHEL Server",
        "RHEL_WORKSTATION": "RHEL Workstation",
        "RHEL_X86": "RHEL for x86",
      },
      "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
        "DAILY": "daily",
        "MONTHLY": "monthly",
        "QUARTERLY": "quarterly",
        "WEEKLY": "weekly",
      },
      "RHSM_API_QUERY_SET_INVENTORY_GUESTS_TYPES": Object {
        "LIMIT": "limit",
        "OFFSET": "offset",
      },
      "RHSM_API_QUERY_SET_INVENTORY_TYPES": Object {
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SET_OPTIN_TYPES": Object {
        "CONDUIT_SYNC": "enable_conduit_sync",
        "TALLY_REPORT": "enable_tally_reporting",
        "TALLY_SYNC": "enable_tally_sync",
      },
      "RHSM_API_QUERY_SET_REPORT_CAPACITY_TYPES": Object {
        "END_DATE": "ending",
        "GRANULARITY": "granularity",
        "SLA": "sla",
        "START_DATE": "beginning",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SLA_TYPES": Object {
        "NONE": "",
        "PREMIUM": "premium",
        "SELF": "self-support",
        "STANDARD": "standard",
      },
      "RHSM_API_QUERY_TYPES": Object {
        "CONDUIT_SYNC": "enable_conduit_sync",
        "END_DATE": "ending",
        "GRANULARITY": "granularity",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "START_DATE": "beginning",
        "TALLY_REPORT": "enable_tally_reporting",
        "TALLY_SYNC": "enable_tally_sync",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_USAGE_TYPES": Object {
        "DEVELOPMENT": "Development/Test",
        "DISASTER": "Disaster Recovery",
        "PRODUCTION": "Production",
        "UNSPECIFIED": "",
      },
      "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
      "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
        "CLOUD_CORES": "cloud_cores",
        "CLOUD_INSTANCES": "cloud_instance_count",
        "CLOUD_SOCKETS": "cloud_sockets",
        "CORES": "cores",
        "DATE": "date",
        "HAS_INFINITE": "has_infinite_quantity",
        "HYPERVISOR_CORES": "hypervisor_cores",
        "HYPERVISOR_SOCKETS": "hypervisor_sockets",
        "PHYSICAL_CORES": "physical_cores",
        "PHYSICAL_SOCKETS": "physical_sockets",
        "SOCKETS": "sockets",
      },
      "RHSM_API_RESPONSE_ERROR_DATA": "errors",
      "RHSM_API_RESPONSE_ERROR_DATA_CODE_TYPES": Object {
        "GENERIC": "SUBSCRIPTIONS1003",
        "OPTIN": "SUBSCRIPTIONS1004",
      },
      "RHSM_API_RESPONSE_ERROR_DATA_TYPES": Object {
        "CODE": "code",
        "DETAIL": "detail",
      },
      "RHSM_API_RESPONSE_INVENTORY_DATA": "data",
      "RHSM_API_RESPONSE_INVENTORY_DATA_TYPES": Object {
        "CORES": "cores",
        "GUESTS": "number_of_guests",
        "HARDWARE": "hardware_type",
        "ID": "insights_id",
        "INVENTORY_ID": "inventory_id",
        "LAST_SEEN": "last_seen",
        "NAME": "display_name",
        "SOCKETS": "sockets",
        "SUBSCRIPTION_ID": "subscription_manager_id",
      },
      "RHSM_API_RESPONSE_INVENTORY_GUESTS_DATA_TYPES": Object {
        "ID": "insights_id",
        "LAST_SEEN": "last_seen",
        "NAME": "display_name",
        "SUBSCRIPTION_ID": "subscription_manager_id",
      },
      "RHSM_API_RESPONSE_LINKS": "links",
      "RHSM_API_RESPONSE_LINKS_TYPES": Object {
        "FIRST": "first",
        "LAST": "last",
        "NEXT": "next",
        "PREVIOUS": "previous",
      },
      "RHSM_API_RESPONSE_META": "meta",
      "RHSM_API_RESPONSE_META_TYPES": Object {
        "COUNT": "count",
      },
      "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
      "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
        "CLOUD_CORES": "cloud_cores",
        "CLOUD_INSTANCES": "cloud_instance_count",
        "CLOUD_SOCKETS": "cloud_sockets",
        "CORES": "cores",
        "DATE": "date",
        "HAS_DATA": "has_data",
        "HYPERVISOR_CORES": "hypervisor_cores",
        "HYPERVISOR_SOCKETS": "hypervisor_sockets",
        "PHYSICAL_CORES": "physical_cores",
        "PHYSICAL_SOCKETS": "physical_sockets",
        "SOCKETS": "sockets",
      },
    },
  },
  "default": Object {
    "platformApi": Object {
      "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
      "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": Object {
        "ENTITLED": "is_entitled",
      },
      "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
      "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": Object {
        "USER": "user",
      },
      "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": Object {
        "ORG_ADMIN": "is_org_admin",
      },
      "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": Object {
        "PERMISSION": "permission",
        "RESOURCE_DEFS": "resourceDefinitions",
      },
    },
    "rhsmApi": Object {
      "RHSM_API_PATH_ID_TYPES": Object {
        "OPENSHIFT": "OpenShift Container Platform",
        "RHEL": "RHEL",
        "RHEL_ARM": "RHEL for ARM",
        "RHEL_COMPUTE_NODE": "RHEL Compute Node",
        "RHEL_DESKTOP": "RHEL Desktop",
        "RHEL_IBM_POWER": "RHEL for IBM Power",
        "RHEL_IBM_Z": "RHEL for IBM z",
        "RHEL_SERVER": "RHEL Server",
        "RHEL_WORKSTATION": "RHEL Workstation",
        "RHEL_X86": "RHEL for x86",
      },
      "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
        "DAILY": "daily",
        "MONTHLY": "monthly",
        "QUARTERLY": "quarterly",
        "WEEKLY": "weekly",
      },
      "RHSM_API_QUERY_SET_INVENTORY_GUESTS_TYPES": Object {
        "LIMIT": "limit",
        "OFFSET": "offset",
      },
      "RHSM_API_QUERY_SET_INVENTORY_TYPES": Object {
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SET_OPTIN_TYPES": Object {
        "CONDUIT_SYNC": "enable_conduit_sync",
        "TALLY_REPORT": "enable_tally_reporting",
        "TALLY_SYNC": "enable_tally_sync",
      },
      "RHSM_API_QUERY_SET_REPORT_CAPACITY_TYPES": Object {
        "END_DATE": "ending",
        "GRANULARITY": "granularity",
        "SLA": "sla",
        "START_DATE": "beginning",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_SLA_TYPES": Object {
        "NONE": "",
        "PREMIUM": "premium",
        "SELF": "self-support",
        "STANDARD": "standard",
      },
      "RHSM_API_QUERY_TYPES": Object {
        "CONDUIT_SYNC": "enable_conduit_sync",
        "END_DATE": "ending",
        "GRANULARITY": "granularity",
        "LIMIT": "limit",
        "OFFSET": "offset",
        "SLA": "sla",
        "START_DATE": "beginning",
        "TALLY_REPORT": "enable_tally_reporting",
        "TALLY_SYNC": "enable_tally_sync",
        "USAGE": "usage",
      },
      "RHSM_API_QUERY_USAGE_TYPES": Object {
        "DEVELOPMENT": "Development/Test",
        "DISASTER": "Disaster Recovery",
        "PRODUCTION": "Production",
        "UNSPECIFIED": "",
      },
      "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
      "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
        "CLOUD_CORES": "cloud_cores",
        "CLOUD_INSTANCES": "cloud_instance_count",
        "CLOUD_SOCKETS": "cloud_sockets",
        "CORES": "cores",
        "DATE": "date",
        "HAS_INFINITE": "has_infinite_quantity",
        "HYPERVISOR_CORES": "hypervisor_cores",
        "HYPERVISOR_SOCKETS": "hypervisor_sockets",
        "PHYSICAL_CORES": "physical_cores",
        "PHYSICAL_SOCKETS": "physical_sockets",
        "SOCKETS": "sockets",
      },
      "RHSM_API_RESPONSE_ERROR_DATA": "errors",
      "RHSM_API_RESPONSE_ERROR_DATA_CODE_TYPES": Object {
        "GENERIC": "SUBSCRIPTIONS1003",
        "OPTIN": "SUBSCRIPTIONS1004",
      },
      "RHSM_API_RESPONSE_ERROR_DATA_TYPES": Object {
        "CODE": "code",
        "DETAIL": "detail",
      },
      "RHSM_API_RESPONSE_INVENTORY_DATA": "data",
      "RHSM_API_RESPONSE_INVENTORY_DATA_TYPES": Object {
        "CORES": "cores",
        "GUESTS": "number_of_guests",
        "HARDWARE": "hardware_type",
        "ID": "insights_id",
        "INVENTORY_ID": "inventory_id",
        "LAST_SEEN": "last_seen",
        "NAME": "display_name",
        "SOCKETS": "sockets",
        "SUBSCRIPTION_ID": "subscription_manager_id",
      },
      "RHSM_API_RESPONSE_INVENTORY_GUESTS_DATA_TYPES": Object {
        "ID": "insights_id",
        "LAST_SEEN": "last_seen",
        "NAME": "display_name",
        "SUBSCRIPTION_ID": "subscription_manager_id",
      },
      "RHSM_API_RESPONSE_LINKS": "links",
      "RHSM_API_RESPONSE_LINKS_TYPES": Object {
        "FIRST": "first",
        "LAST": "last",
        "NEXT": "next",
        "PREVIOUS": "previous",
      },
      "RHSM_API_RESPONSE_META": "meta",
      "RHSM_API_RESPONSE_META_TYPES": Object {
        "COUNT": "count",
      },
      "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
      "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
        "CLOUD_CORES": "cloud_cores",
        "CLOUD_INSTANCES": "cloud_instance_count",
        "CLOUD_SOCKETS": "cloud_sockets",
        "CORES": "cores",
        "DATE": "date",
        "HAS_DATA": "has_data",
        "HYPERVISOR_CORES": "hypervisor_cores",
        "HYPERVISOR_SOCKETS": "hypervisor_sockets",
        "PHYSICAL_CORES": "physical_cores",
        "PHYSICAL_SOCKETS": "physical_sockets",
        "SOCKETS": "sockets",
      },
    },
  },
  "platformApiTypes": Object {
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": Object {
      "ENTITLED": "is_entitled",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
    "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": Object {
      "USER": "user",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": Object {
      "ORG_ADMIN": "is_org_admin",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": Object {
      "PERMISSION": "permission",
      "RESOURCE_DEFS": "resourceDefinitions",
    },
  },
  "rhsmApiTypes": Object {
    "RHSM_API_PATH_ID_TYPES": Object {
      "OPENSHIFT": "OpenShift Container Platform",
      "RHEL": "RHEL",
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_COMPUTE_NODE": "RHEL Compute Node",
      "RHEL_DESKTOP": "RHEL Desktop",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_SERVER": "RHEL Server",
      "RHEL_WORKSTATION": "RHEL Workstation",
      "RHEL_X86": "RHEL for x86",
    },
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "daily",
      "MONTHLY": "monthly",
      "QUARTERLY": "quarterly",
      "WEEKLY": "weekly",
    },
    "RHSM_API_QUERY_SET_INVENTORY_GUESTS_TYPES": Object {
      "LIMIT": "limit",
      "OFFSET": "offset",
    },
    "RHSM_API_QUERY_SET_INVENTORY_TYPES": Object {
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_OPTIN_TYPES": Object {
      "CONDUIT_SYNC": "enable_conduit_sync",
      "TALLY_REPORT": "enable_tally_reporting",
      "TALLY_SYNC": "enable_tally_sync",
    },
    "RHSM_API_QUERY_SET_REPORT_CAPACITY_TYPES": Object {
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SLA_TYPES": Object {
      "NONE": "",
      "PREMIUM": "premium",
      "SELF": "self-support",
      "STANDARD": "standard",
    },
    "RHSM_API_QUERY_TYPES": Object {
      "CONDUIT_SYNC": "enable_conduit_sync",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "START_DATE": "beginning",
      "TALLY_REPORT": "enable_tally_reporting",
      "TALLY_SYNC": "enable_tally_sync",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_USAGE_TYPES": Object {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
    "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
      "CLOUD_CORES": "cloud_cores",
      "CLOUD_INSTANCES": "cloud_instance_count",
      "CLOUD_SOCKETS": "cloud_sockets",
      "CORES": "cores",
      "DATE": "date",
      "HAS_INFINITE": "has_infinite_quantity",
      "HYPERVISOR_CORES": "hypervisor_cores",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_CORES": "physical_cores",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_ERROR_DATA": "errors",
    "RHSM_API_RESPONSE_ERROR_DATA_CODE_TYPES": Object {
      "GENERIC": "SUBSCRIPTIONS1003",
      "OPTIN": "SUBSCRIPTIONS1004",
    },
    "RHSM_API_RESPONSE_ERROR_DATA_TYPES": Object {
      "CODE": "code",
      "DETAIL": "detail",
    },
    "RHSM_API_RESPONSE_INVENTORY_DATA": "data",
    "RHSM_API_RESPONSE_INVENTORY_DATA_TYPES": Object {
      "CORES": "cores",
      "GUESTS": "number_of_guests",
      "HARDWARE": "hardware_type",
      "ID": "insights_id",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "NAME": "display_name",
      "SOCKETS": "sockets",
      "SUBSCRIPTION_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_INVENTORY_GUESTS_DATA_TYPES": Object {
      "ID": "insights_id",
      "LAST_SEEN": "last_seen",
      "NAME": "display_name",
      "SUBSCRIPTION_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_LINKS": "links",
    "RHSM_API_RESPONSE_LINKS_TYPES": Object {
      "FIRST": "first",
      "LAST": "last",
      "NEXT": "next",
      "PREVIOUS": "previous",
    },
    "RHSM_API_RESPONSE_META": "meta",
    "RHSM_API_RESPONSE_META_TYPES": Object {
      "COUNT": "count",
    },
    "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
      "CLOUD_CORES": "cloud_cores",
      "CLOUD_INSTANCES": "cloud_instance_count",
      "CLOUD_SOCKETS": "cloud_sockets",
      "CORES": "cores",
      "DATE": "date",
      "HAS_DATA": "has_data",
      "HYPERVISOR_CORES": "hypervisor_cores",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_CORES": "physical_cores",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
  },
}
`;

exports[`ApiTypes should have specific API properties: specific types 1`] = `
Object {
  "platformApi": Object {
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS": "entitlements",
    "PLATFORM_API_RESPONSE_USER_ENTITLEMENTS_APP_TYPES": Object {
      "ENTITLED": "is_entitled",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY": "identity",
    "PLATFORM_API_RESPONSE_USER_IDENTITY_TYPES": Object {
      "USER": "user",
    },
    "PLATFORM_API_RESPONSE_USER_IDENTITY_USER_TYPES": Object {
      "ORG_ADMIN": "is_org_admin",
    },
    "PLATFORM_API_RESPONSE_USER_PERMISSION_TYPES": Object {
      "PERMISSION": "permission",
      "RESOURCE_DEFS": "resourceDefinitions",
    },
  },
  "rhsmApi": Object {
    "RHSM_API_PATH_ID_TYPES": Object {
      "OPENSHIFT": "OpenShift Container Platform",
      "RHEL": "RHEL",
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_COMPUTE_NODE": "RHEL Compute Node",
      "RHEL_DESKTOP": "RHEL Desktop",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_SERVER": "RHEL Server",
      "RHEL_WORKSTATION": "RHEL Workstation",
      "RHEL_X86": "RHEL for x86",
    },
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "daily",
      "MONTHLY": "monthly",
      "QUARTERLY": "quarterly",
      "WEEKLY": "weekly",
    },
    "RHSM_API_QUERY_SET_INVENTORY_GUESTS_TYPES": Object {
      "LIMIT": "limit",
      "OFFSET": "offset",
    },
    "RHSM_API_QUERY_SET_INVENTORY_TYPES": Object {
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_OPTIN_TYPES": Object {
      "CONDUIT_SYNC": "enable_conduit_sync",
      "TALLY_REPORT": "enable_tally_reporting",
      "TALLY_SYNC": "enable_tally_sync",
    },
    "RHSM_API_QUERY_SET_REPORT_CAPACITY_TYPES": Object {
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SLA_TYPES": Object {
      "NONE": "",
      "PREMIUM": "premium",
      "SELF": "self-support",
      "STANDARD": "standard",
    },
    "RHSM_API_QUERY_TYPES": Object {
      "CONDUIT_SYNC": "enable_conduit_sync",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "START_DATE": "beginning",
      "TALLY_REPORT": "enable_tally_reporting",
      "TALLY_SYNC": "enable_tally_sync",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_USAGE_TYPES": Object {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_API_RESPONSE_CAPACITY_DATA": "data",
    "RHSM_API_RESPONSE_CAPACITY_DATA_TYPES": Object {
      "CLOUD_CORES": "cloud_cores",
      "CLOUD_INSTANCES": "cloud_instance_count",
      "CLOUD_SOCKETS": "cloud_sockets",
      "CORES": "cores",
      "DATE": "date",
      "HAS_INFINITE": "has_infinite_quantity",
      "HYPERVISOR_CORES": "hypervisor_cores",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_CORES": "physical_cores",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_ERROR_DATA": "errors",
    "RHSM_API_RESPONSE_ERROR_DATA_CODE_TYPES": Object {
      "GENERIC": "SUBSCRIPTIONS1003",
      "OPTIN": "SUBSCRIPTIONS1004",
    },
    "RHSM_API_RESPONSE_ERROR_DATA_TYPES": Object {
      "CODE": "code",
      "DETAIL": "detail",
    },
    "RHSM_API_RESPONSE_INVENTORY_DATA": "data",
    "RHSM_API_RESPONSE_INVENTORY_DATA_TYPES": Object {
      "CORES": "cores",
      "GUESTS": "number_of_guests",
      "HARDWARE": "hardware_type",
      "ID": "insights_id",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "NAME": "display_name",
      "SOCKETS": "sockets",
      "SUBSCRIPTION_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_INVENTORY_GUESTS_DATA_TYPES": Object {
      "ID": "insights_id",
      "LAST_SEEN": "last_seen",
      "NAME": "display_name",
      "SUBSCRIPTION_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_LINKS": "links",
    "RHSM_API_RESPONSE_LINKS_TYPES": Object {
      "FIRST": "first",
      "LAST": "last",
      "NEXT": "next",
      "PREVIOUS": "previous",
    },
    "RHSM_API_RESPONSE_META": "meta",
    "RHSM_API_RESPONSE_META_TYPES": Object {
      "COUNT": "count",
    },
    "RHSM_API_RESPONSE_PRODUCTS_DATA": "data",
    "RHSM_API_RESPONSE_PRODUCTS_DATA_TYPES": Object {
      "CLOUD_CORES": "cloud_cores",
      "CLOUD_INSTANCES": "cloud_instance_count",
      "CLOUD_SOCKETS": "cloud_sockets",
      "CORES": "cores",
      "DATE": "date",
      "HAS_DATA": "has_data",
      "HYPERVISOR_CORES": "hypervisor_cores",
      "HYPERVISOR_SOCKETS": "hypervisor_sockets",
      "PHYSICAL_CORES": "physical_cores",
      "PHYSICAL_SOCKETS": "physical_sockets",
      "SOCKETS": "sockets",
    },
  },
}
`;
